src/com/writeoncereadmany/minstrel/generated/MinstrelParser.java
package com.writeoncereadmany.minstrel.generated;

// Generated from Minstrel.g4 by ANTLR 4.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class MinstrelParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__18=1, T__17=2, T__16=3, T__15=4, T__14=5, T__13=6, T__12=7, T__11=8, 
		T__10=9, T__9=10, T__8=11, T__7=12, T__6=13, T__5=14, T__4=15, T__3=16, 
		T__2=17, T__1=18, T__0=19, SPACE=20, INTEGER_LITERAL=21, FLOAT_LITERAL=22, 
		STRING_LITERAL=23, OF=24, GIVING=25, TAKING=26, CLASS=27, IMPLEMENTS=28, 
		CONSTRUCT=29, METHOD=30, RETURNS=31, INTERFACE=32, EXTENDS=33, FUNCTION=34, 
		ENUM=35, IS=36, BECOMES=37, IF=38, ELSE=39, WHILE=40, FOR=41, IN=42, RETURN=43, 
		ERROR=44, OR=45, AND=46, NOT=47, IDENTIFIER=48;
	public static final String[] tokenNames = {
		"<INVALID>", "']'", "'.'", "')'", "','", "'+'", "'*'", "'-'", "'['", "'('", 
		"'<'", "'=/='", "'='", "';'", "'<='", "'{'", "'>'", "'/'", "'}'", "'>='", 
		"SPACE", "INTEGER_LITERAL", "FLOAT_LITERAL", "STRING_LITERAL", "'of'", 
		"'giving'", "'taking'", "'class'", "'implements'", "'construct'", "'method'", 
		"'returns'", "'interface'", "'extends'", "'function'", "'enum'", "'is'", 
		"'becomes'", "'if'", "'else'", "'while'", "'for'", "'in'", "'return'", 
		"'error'", "'or'", "'and'", "'not'", "IDENTIFIER"
	};
	public static final int
		RULE_program = 0, RULE_generic_argument_list = 1, RULE_initial_generic_parameter = 2, 
		RULE_additional_generic_parameter = 3, RULE_variance_modifier = 4, RULE_type = 5, 
		RULE_inner_type = 6, RULE_modifier = 7, RULE_class_definition = 8, RULE_class_body = 9, 
		RULE_field_definition = 10, RULE_constructor_definition = 11, RULE_method_definition = 12, 
		RULE_parameter_list = 13, RULE_parameter = 14, RULE_argument_list = 15, 
		RULE_block = 16, RULE_interface_definition = 17, RULE_interface_body = 18, 
		RULE_method_declaration = 19, RULE_function_interface_definition = 20, 
		RULE_function_definition = 21, RULE_enum_definition = 22, RULE_enum_value = 23, 
		RULE_name = 24, RULE_statement = 25, RULE_definition = 26, RULE_expression = 27;
	public static final String[] ruleNames = {
		"program", "generic_argument_list", "initial_generic_parameter", "additional_generic_parameter", 
		"variance_modifier", "type", "inner_type", "modifier", "class_definition", 
		"class_body", "field_definition", "constructor_definition", "method_definition", 
		"parameter_list", "parameter", "argument_list", "block", "interface_definition", 
		"interface_body", "method_declaration", "function_interface_definition", 
		"function_definition", "enum_definition", "enum_value", "name", "statement", 
		"definition", "expression"
	};

	@Override
	public String getGrammarFileName() { return "Minstrel.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public MinstrelParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitProgram(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(59);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << 7) | (1L << 9) | (1L << INTEGER_LITERAL) | (1L << FLOAT_LITERAL) | (1L << STRING_LITERAL) | (1L << CLASS) | (1L << INTERFACE) | (1L << FUNCTION) | (1L << ENUM) | (1L << IF) | (1L << WHILE) | (1L << FOR) | (1L << RETURN) | (1L << ERROR) | (1L << NOT) | (1L << IDENTIFIER))) != 0)) {
				{
				{
				setState(56); statement();
				}
				}
				setState(61);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Generic_argument_listContext extends ParserRuleContext {
		public Initial_generic_parameterContext initial_generic_parameter() {
			return getRuleContext(Initial_generic_parameterContext.class,0);
		}
		public Additional_generic_parameterContext additional_generic_parameter(int i) {
			return getRuleContext(Additional_generic_parameterContext.class,i);
		}
		public List<Additional_generic_parameterContext> additional_generic_parameter() {
			return getRuleContexts(Additional_generic_parameterContext.class);
		}
		public Generic_argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_generic_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterGeneric_argument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitGeneric_argument_list(this);
		}
	}

	public final Generic_argument_listContext generic_argument_list() throws RecognitionException {
		Generic_argument_listContext _localctx = new Generic_argument_listContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_generic_argument_list);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(62); initial_generic_parameter();
			setState(67);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(63); match(4);
					setState(64); additional_generic_parameter();
					}
					} 
				}
				setState(69);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Initial_generic_parameterContext extends ParserRuleContext {
		public Variance_modifierContext variance_modifier() {
			return getRuleContext(Variance_modifierContext.class,0);
		}
		public Inner_typeContext inner_type() {
			return getRuleContext(Inner_typeContext.class,0);
		}
		public Initial_generic_parameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_initial_generic_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterInitial_generic_parameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitInitial_generic_parameter(this);
		}
	}

	public final Initial_generic_parameterContext initial_generic_parameter() throws RecognitionException {
		Initial_generic_parameterContext _localctx = new Initial_generic_parameterContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_initial_generic_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(70); variance_modifier();
			setState(71); inner_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Additional_generic_parameterContext extends ParserRuleContext {
		public Variance_modifierContext variance_modifier() {
			return getRuleContext(Variance_modifierContext.class,0);
		}
		public Inner_typeContext inner_type() {
			return getRuleContext(Inner_typeContext.class,0);
		}
		public Additional_generic_parameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_additional_generic_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterAdditional_generic_parameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitAdditional_generic_parameter(this);
		}
	}

	public final Additional_generic_parameterContext additional_generic_parameter() throws RecognitionException {
		Additional_generic_parameterContext _localctx = new Additional_generic_parameterContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_additional_generic_parameter);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OF) | (1L << GIVING) | (1L << TAKING))) != 0)) {
				{
				setState(73); variance_modifier();
				}
			}

			setState(76); inner_type();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Variance_modifierContext extends ParserRuleContext {
		public TerminalNode OF() { return getToken(MinstrelParser.OF, 0); }
		public TerminalNode TAKING() { return getToken(MinstrelParser.TAKING, 0); }
		public TerminalNode GIVING() { return getToken(MinstrelParser.GIVING, 0); }
		public Variance_modifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variance_modifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterVariance_modifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitVariance_modifier(this);
		}
	}

	public final Variance_modifierContext variance_modifier() throws RecognitionException {
		Variance_modifierContext _localctx = new Variance_modifierContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variance_modifier);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(78);
			_la = _input.LA(1);
			if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OF) | (1L << GIVING) | (1L << TAKING))) != 0)) ) {
			_errHandler.recoverInline(this);
			}
			consume();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class TypeContext extends ParserRuleContext {
		public Generic_argument_listContext generic_argument_list() {
			return getRuleContext(Generic_argument_listContext.class,0);
		}
		public List<ModifierContext> modifier() {
			return getRuleContexts(ModifierContext.class);
		}
		public ModifierContext modifier(int i) {
			return getRuleContext(ModifierContext.class,i);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_type);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(83);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			while ( _alt!=2 && _alt!=-1 ) {
				if ( _alt==1 ) {
					{
					{
					setState(80); modifier();
					}
					} 
				}
				setState(85);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,3,_ctx);
			}
			setState(86); name();
			setState(88);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OF) | (1L << GIVING) | (1L << TAKING))) != 0)) {
				{
				setState(87); generic_argument_list();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Inner_typeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Inner_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_inner_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterInner_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitInner_type(this);
		}
	}

	public final Inner_typeContext inner_type() throws RecognitionException {
		Inner_typeContext _localctx = new Inner_typeContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_inner_type);
		try {
			setState(95);
			switch (_input.LA(1)) {
			case IDENTIFIER:
				enterOuterAlt(_localctx, 1);
				{
				setState(90); name();
				}
				break;
			case 9:
				enterOuterAlt(_localctx, 2);
				{
				setState(91); match(9);
				setState(92); type();
				setState(93); match(3);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ModifierContext extends ParserRuleContext {
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ModifierContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_modifier; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterModifier(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitModifier(this);
		}
	}

	public final ModifierContext modifier() throws RecognitionException {
		ModifierContext _localctx = new ModifierContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_modifier);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(97); name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_definitionContext extends ParserRuleContext {
		public Generic_argument_listContext generic_argument_list() {
			return getRuleContext(Generic_argument_listContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode IMPLEMENTS() { return getToken(MinstrelParser.IMPLEMENTS, 0); }
		public Class_bodyContext class_body() {
			return getRuleContext(Class_bodyContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public TerminalNode CLASS() { return getToken(MinstrelParser.CLASS, 0); }
		public Class_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterClass_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitClass_definition(this);
		}
	}

	public final Class_definitionContext class_definition() throws RecognitionException {
		Class_definitionContext _localctx = new Class_definitionContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_class_definition);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(99); match(CLASS);
			setState(100); name();
			setState(102);
			_la = _input.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << OF) | (1L << GIVING) | (1L << TAKING))) != 0)) {
				{
				setState(101); generic_argument_list();
				}
			}

			setState(104); match(IMPLEMENTS);
			setState(105); type();
			setState(106); match(15);
			setState(107); class_body();
			setState(108); match(18);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Class_bodyContext extends ParserRuleContext {
		public List<Field_definitionContext> field_definition() {
			return getRuleContexts(Field_definitionContext.class);
		}
		public Constructor_definitionContext constructor_definition(int i) {
			return getRuleContext(Constructor_definitionContext.class,i);
		}
		public List<Method_definitionContext> method_definition() {
			return getRuleContexts(Method_definitionContext.class);
		}
		public List<Constructor_definitionContext> constructor_definition() {
			return getRuleContexts(Constructor_definitionContext.class);
		}
		public Field_definitionContext field_definition(int i) {
			return getRuleContext(Field_definitionContext.class,i);
		}
		public Method_definitionContext method_definition(int i) {
			return getRuleContext(Method_definitionContext.class,i);
		}
		public Class_bodyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_class_body; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterClass_body(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitClass_body(this);
		}
	}

	public final Class_bodyContext class_body() throws RecognitionException {
		Class_bodyContext _localctx = new Class_bodyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_class_body);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(115);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << CONSTRUCT) | (1L << METHOD) | (1L << IDENTIFIER))) != 0)) {
				{
				setState(113);
				switch (_input.LA(1)) {
				case IDENTIFIER:
					{
					setState(110); field_definition();
					}
					break;
				case CONSTRUCT:
					{
					setState(111); constructor_definition();
					}
					break;
				case METHOD:
					{
					setState(112); method_definition();
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(117);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Field_definitionContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Field_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_field_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterField_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitField_definition(this);
		}
	}

	public final Field_definitionContext field_definition() throws RecognitionException {
		Field_definitionContext _localctx = new Field_definitionContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_field_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(118); type();
			setState(119); name();
			setState(120); match(13);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Constructor_definitionContext extends ParserRuleContext {
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public TerminalNode CONSTRUCT() { return getToken(MinstrelParser.CONSTRUCT, 0); }
		public Constructor_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_constructor_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterConstructor_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitConstructor_definition(this);
		}
	}

	public final Constructor_definitionContext constructor_definition() throws RecognitionException {
		Constructor_definitionContext _localctx = new Constructor_definitionContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_constructor_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(CONSTRUCT);
			setState(123); parameter_list();
			setState(124); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Method_definitionContext extends ParserRuleContext {
		public TerminalNode METHOD() { return getToken(MinstrelParser.METHOD, 0); }
		public Parameter_listContext parameter_list() {
			return getRuleContext(Parameter_listContext.class,0);
		}
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode RETURNS() { return getToken(MinstrelParser.RETURNS, 0); }
		public BlockContext block() {
			return getRuleContext(BlockContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public Method_definitionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_definition; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterMethod_definition(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitMethod_definition(this);
		}
	}

	public final Method_definitionContext method_definition() throws RecognitionException {
		Method_definitionContext _localctx = new Method_definitionContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_method_definition);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(METHOD);
			setState(127); name();
			setState(128); parameter_list();
			setState(129); match(RETURNS);
			setState(130); type();
			setState(131); block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Parameter_listContext extends ParserRuleContext {
		public List<ParameterContext> parameter() {
			return getRuleContexts(ParameterContext.class);
		}
		public ParameterContext parameter(int i) {
			return getRuleContext(ParameterContext.class,i);
		}
		public Parameter_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterParameter_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitParameter_list(this);
		}
	}

	public final Parameter_listContext parameter_list() throws RecognitionException {
		Parameter_listContext _localctx = new Parameter_listContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_parameter_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(133); match(8);
			setState(142);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(134); parameter();
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==4) {
					{
					{
					setState(135); match(4);
					setState(136); parameter();
					}
					}
					setState(141);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(144); match(1);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParameterContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public NameContext name() {
			return getRuleContext(NameContext.class,0);
		}
		public ParameterContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameter; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterParameter(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitParameter(this);
		}
	}

	public final ParameterContext parameter() throws RecognitionException {
		ParameterContext _localctx = new ParameterContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_parameter);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(146); type();
			setState(147); name();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Argument_listContext extends ParserRuleContext {
		public ExpressionContext expression(int i) {
			return getRuleContext(ExpressionContext.class,i);
		}
		public List<ExpressionContext> expression() {
			return getRuleContexts(ExpressionContext.class);
		}
		public Argument_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_argument_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).enterArgument_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof MinstrelListener ) ((MinstrelListener)listener).exitArgument_list(this);
		}
	}
